feat: 完善Dockerfile文件和一些maven编译时扫描到的规范问题的修复